--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美应用</title>
     <meta name="viewport" content="width=device-width">
-    <script src="//cdn.bootcss.com/angular.js/1.5.0/angular.js"></script>
-    <script src="//cdn.bootcss.com/angular.js/1.5.0/angular-route.js"></script>
+    <script src="app/bower_components/angular/angular.js"></script>
+    <script src="app/bower_components/angular-route/angular-route.js"></script>
+    <script src="app/bower_components/angular-base64/angular-base64.js"></script>
+    <script src="app/bower_components/angular-utf8-base64/angular-utf8-base64.js"></script>
+    <script src="app/bower_components/marked/lib/marked.js"></script>
+    <script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
+    <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
+    <script src="app/bower_components/github-api/src/github.js"></script>
+    <script src="app/bower_components/github-js/dist/github.min.js"></script>
+    <script src="app/bower_components/underscore/underscore.js"></script>
     <script src="./app.js"></script>
     <script src="./app/helloCtrl.js"></script>
     <script src="app/components/hello/hello.js"></script>
     <script src="app/components/appList/appList.js"></script>
+    <script src="app/components/jekyll/posts.js"></script>
     <link rel="stylesheet" href="style/app.min.css">
 </head>
 <body ng-app="app">
@@ -18,19 +27,21 @@
 <header>
     <div class="logo">
         <a href="http://hi.zuimeia.com" target="_blank" title="最美家族">
-            <img src="images/icon128.png"/>
+            <img src="images/gavatar.jpg"/>
         </a>
     </div>
     <div class="top-bar">
-        <a href="#" platform="2" class="link link-android">Android</a>
-        <a href="#" platform="1" class="link link-apple active">iPhone</a>
+        <a href="#hello" class="link" active>hello</a>
+        <a href="#zuimeia" class="link">zuimeia</a>
+        <a href="#jekyll" class="link">jekyll</a>
     </div>
     <div class="menu">
-        <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美应用" type="text">
+        <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美博客" type="text">
         <input class="search-icon" id="btn-search" type="button">
         <input type="checkbox" id="cb-random">&nbsp;随机
     </div>
 </header>
+
 <div class="wrap animation fadein">
     <div class="container-fluid center-container">
         <div class="row" id="app-list">
@@ -46,25 +57,25 @@
             <a href="javascript:void(0);" id="weibo-link" title="分享到微博">
                 <img src="images/icon_weibo.png" width="30px"/>
             </a>
-            <!--
             <a href="javascript:void(0);" id="email-link" title="发给朋友">
                 <img src="images/icon_mail.png" width="30px" />
-            </a>-->
-            <input type="text" class="copy-input" value="点击复制分享插件地址：http://chrome.zuimeia.com">
+            </a>
         </div>
-        <a class="next-apps" href="javascript:void(0);">
-            <div class="download-ad more-apps">查看更多应用</div>
-        </a>
+        <div class="share" href="javascript:void(0);">
+            <label>
+                <input type="text" class="copy-input" value="点击复制分享网站地址：http://blog.jimmylv.info">
+            </label>
+        </div>
     </div>
     <div class="slogan">
-        <b>最美应用</b> —— 有价值的好应用
+        <b>最美博客</b> —— 有价值的好博客
     </div>
     <ul class="legals">
-        <li><a href="http://zuimeia.com/about.html" target="_blank">关于</a></li>
-        <li><a href="http://blog.zuimeia.com" target="_blank">博客</a></li>
-        <li><a href="http://zuimeia.com/index.html" target="_blank">网站</a></li>
+        <li><a href="http://blog.jimmylv.info/about.html" target="_blank">关于</a></li>
+        <li><a href="http://blog.jimmylv.info" target="_blank">博客</a></li>
+        <li><a href="http://www.jimmylv.info" target="_blank">网站</a></li>
     </ul>
-    <p class="copyright">© 2015 · 最美应用 · All Rights Reserved · 北京市朝阳区望京 SOHO 塔2 C座230311室</p>
+    <p class="copyright">© 2016 · 最美博客 · All Rights Reserved · Jimmy Lv</p>
 </footer>
 </body>
 </html>
