[#3] - Add angular-cache for github api and clean code.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="app/bower_components/angular-utf8-base64/angular-utf8-base64.js"></script>
     <script src="app/bower_components/marked/lib/marked.js"></script>
     <script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
+    <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
     <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
     <script src="app/bower_components/github-api/src/github.js"></script>
     <script src="app/bower_components/github-js/dist/github.min.js"></script>
