[#3] - Add README and github repo url.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <a href="#hello" class="link" active>hello</a>
         <a href="#zuimeia" class="link">zuimeia</a>
         <a href="#jekyll" class="link">jekyll</a>
+        <a href="https://github.com/JimmyLv/blog-github-api-angular" class="link">github</a>
     </div>
     <div class="menu">
         <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美博客" type="text">
