--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>最美应用</title>
+    <title>最美博客</title>
     <meta name="viewport" content="width=device-width">
     <script src="app/bower_components/angular/angular.js"></script>
     <script src="app/bower_components/angular-route/angular-route.js"></script>
@@ -27,8 +27,8 @@
 
 <header>
     <div class="logo">
-        <a href="http://hi.zuimeia.com" target="_blank" title="最美家族">
-            <img src="images/gavatar.jpg"/>
+        <a href="http://blog.jimmylv.info" target="_blank" title="立青作品">
+            <img src="images/avatar.jpg"/>
         </a>
     </div>
     <div class="top-bar">
