--- a/index.html
+++ b/index.html
@@ -4,77 +4,45 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/app.min.css">
-    <link rel="stylesheet" href="style/github.css">
+    <!--<link rel="stylesheet" href="style/github.css">-->
+    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="style/font-awesome.css">
+    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/yue.css">
 </head>
-<body ng-app="app">
+<body ng-app="app" class="body-design">
 
-<header>
-    <div class="logo">
-        <a href="http://blog.jimmylv.info" target="_blank" title="立青作品">
-            <img src="images/avatar.jpg"/>
-        </a>
-    </div>
-    <div class="top-bar">
-        <a href="#hello" class="link" active>hello</a>
-        <a href="#zuimeia" class="link">zuimeia</a>
-        <a href="#jekyll" class="link">jekyll</a>
-        <a href="#note" class="link">note</a>
-        <a ng-link="dashboard" class="link">dashboard</a>
-        <a ui-sref="users2" class="link">users</a>
-        <a href="https://github.com/JimmyLv/blog-github-api-angular" class="link" target="_blank">github</a>
-    </div>
-    <div class="menu">
-        <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美博客" type="text">
-        <input class="search-icon" id="btn-search" type="button">
-        <input type="checkbox" id="cb-random">&nbsp;随机
-    </div>
-</header>
+<div ng-include="'app/partials/header.html'"></div>
 
 <div class="wrap animation fadein">
-    <div class="container-fluid center-container">
-        <div class="row" id="important-info">
-            <div>Just say hello!</div>
-        </div>
-        <div class="row" id="app-list">
+    <!--<div class="container-fluid center-container">-->
+    <div class="container" style="margin-top: 60px">
+        <div class="row">
             <div ng-view></div>
-            <div ui-view></div>
-            <div ui-view="viewA"></div>
-            <div ui-view="viewB"></div>
-            <div ng-viewport="dashboard"></div>
-            <div ng-viewport="users"></div>
         </div>
     </div>
+    <div ui-view></div>
+    <div ui-view="viewA"></div>
+    <div ui-view="viewB"></div>
+    <div ng-viewport="dashboard"></div>
+    <div ng-viewport="users"></div>
 </div>
 
-<footer>
-    <div class="page-tool">
-        <div class="share">
-            推荐给朋友：
-            <a href="javascript:void(0);" id="weibo-link" title="分享到微博">
-                <img src="images/icon_weibo.png" width="30px"/>
-            </a>
-            <a href="javascript:void(0);" id="email-link" title="发给朋友">
-                <img src="images/icon_mail.png" width="30px" />
-            </a>
-        </div>
-        <div class="share" href="javascript:void(0);">
-            <label>
-                <input type="text" class="copy-input" value="点击复制分享网站地址：http://blog.jimmylv.info">
-            </label>
-        </div>
-    </div>
-    <div class="slogan">
-        <b>最美博客</b> —— 有价值的好博客
-    </div>
-    <ul class="legals">
-        <li><a href="http://blog.jimmylv.info/about.html" target="_blank">关于</a></li>
-        <li><a href="http://blog.jimmylv.info" target="_blank">博客</a></li>
-        <li><a href="http://www.jimmylv.info" target="_blank">网站</a></li>
-    </ul>
-    <p class="copyright">© 2016 · 最美博客 · All Rights Reserved · Jimmy Lv</p>
-</footer>
+<!--<div style="position:fixed;right:15px;top:62px;">-->
+    <!--<button id="content_btn" class="btn btn-primary" style="width:43px; height:34px;">-->
+        <!--<i class="fa fa-lg fa-plus"></i>-->
+    <!--</button>-->
+<!--</div>-->
+
+<div style="position:fixed;right:15px;top:62px;">
+    <button id="nav_btn" class="btn btn-primary">
+        <i class="fa fa-lg fa-navicon"></i>
+    </button>
+</div>
+
+<div ng-include="'app/partials/footer.html'"></div>
 
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
@@ -92,6 +60,8 @@
 <script src="app/bower_components/lowdb/lowdb.min.js"></script>
 <!--<script src="app/bower_components/highlight/src/highlight.js"></script>-->
 <script src="http://apps.bdimg.com/libs/highlight.js/8.6/highlight.min.js"></script>
+
+<script src="js/bootstrap.js"></script>
 <script src="app.js"></script>
 <script src="app.routes.js"></script>
 <script src="app/helloCtrl.js"></script>
@@ -102,7 +72,9 @@
 <script src="app/components/appList/appList.js"></script>
 <script src="app/components/jekyll/posts.js"></script>
 <script src="app/components/note/note.js"></script>
+<script src="app/components/note/aside1/aside1.js"></script>
 <script src="app/components/note/aside2/aside2.js"></script>
+<script src="app/components/note/aside3/aside3.js"></script>
 <script src="app/components/note/posts/posts.js"></script>
 <script src="app/services/githubService.js"></script>
 </body>
