--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>最美博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/app.min.css">
-    <!--<link rel="stylesheet" href="style/github.css">-->
+    <link rel="stylesheet" href="style/github.css">
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/font-awesome.css">
     <link rel="stylesheet" href="style/base.css">
@@ -32,7 +32,7 @@
 <!--</button>-->
 <!--</div>-->
 
-<div style="position:fixed;right:15px;top:62px;">
+<div style="position:fixed;right:15px;top:68px;">
     <button id="nav_btn" class="btn btn-primary">
         <i class="fa fa-lg fa-navicon"></i>
     </button>
@@ -51,7 +51,6 @@
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
 <script src="app/bower_components/github-api/src/github.js"></script>
-<script src="app/bower_components/github-js/dist/github.min.js"></script>
 <script src="app/bower_components/underscore/underscore.js"></script>
 <script src="app/bower_components/lowdb/lowdb.min.js"></script>
 <!--<script src="app/bower_components/highlight/src/highlight.js"></script>-->
@@ -71,7 +70,8 @@
 <script src="app/components/note/aside1/aside1.js"></script>
 <script src="app/components/note/aside2/aside2.js"></script>
 <script src="app/components/note/aside3/aside3.js"></script>
-<script src="app/components/note/posts/posts.js"></script>
+<script src="app/components/note/postLink/postLink.js"></script>
+<script src="app/components/note/content/content.js"></script>
 <script src="app/services/githubService.js"></script>
 </body>
 </html>
