--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 <div ng-include="'app/partials/header.html'"></div>
 
-<div class="container" style="margin-top: 60px">
+<div class="container" ng-controller="MainCtrl as main">
+    <!--<div>{{ main.message }} / {{ main.config }} / {{ main.index }}</div>-->
+    <!--<note site-info="main.config" index="main.index"></note>-->
     <div class="row" ng-view></div>
+    <div class="row" ui-view></div>
 </div>
 
-<div ui-view></div>
 <div ui-view="viewA"></div>
 <div ui-view="viewB"></div>
 <div ng-viewport="dashboard"></div>
@@ -50,7 +52,7 @@
 <script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
-<script src="app/bower_components/github-api/src/github.js"></script>
+<script src="app/bower_components/github-api/dist/github.bundle.min.js"></script>
 <script src="app/bower_components/underscore/underscore.js"></script>
 <script src="app/bower_components/lowdb/lowdb.min.js"></script>
 <!--<script src="app/bower_components/highlight/src/highlight.js"></script>-->
@@ -59,7 +61,8 @@
 <script src="js/bootstrap.js"></script>
 <script src="app.js"></script>
 <script src="app.routes.js"></script>
-<script src="app/helloCtrl.js"></script>
+<script src="app/controllers/helloCtrl.js"></script>
+<script src="app/controllers/mainController.js"></script>
 <script src="components/dashboard/dashboard.js"></script>
 <script src="components/home/home.js"></script>
 <script src="components/users/users.js"></script>
