--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div ng-include="'app/partials/header.html'"></div>
 
 <div class="container" ng-controller="MainCtrl as main">
-    <!--<div>{{ main.message }} / {{ main.config }} / {{ main.index }}</div>-->
+    <!--<div>{{ main.message }} / {{ main.config }} </div>-->
     <!--<note site-info="main.config" index="main.index"></note>-->
     <div class="row" ng-view></div>
     <div class="row" ui-view></div>
