[#14] - Fixed unsupported lang when hightlight code and change style.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>最美博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/app.min.css">
-    <link rel="stylesheet" href="style/github.css">
+    <link rel="stylesheet" href="style/hightlight.css">
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/font-awesome.css">
     <link rel="stylesheet" href="style/base.css">
