[#15] - Add disqus for comment functionality and change to html5Mode.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <script src="app/bower_components/marked/lib/marked.js"></script>
 <script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
+<script src="app/bower_components/angularUtils-disqus/dirDisqus.js"></script>
+
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
 <script src="app/bower_components/github-api/dist/github.bundle.min.js"></script>
 <script src="app/bower_components/underscore/underscore.js"></script>
