--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/app.min.css">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="style/hightlight.css">
+    <link rel="stylesheet" href="style/loading-bar.css">
+    <link rel="stylesheet" href="style/app.min.css">
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/font-awesome.css">
     <link rel="stylesheet" href="style/base.css">
@@ -28,11 +30,11 @@
 <div ng-viewport="dashboard"></div>
 <div ng-viewport="users"></div>
 
-<!--<div style="position:fixed;right:15px;top:62px;">-->
-<!--<button id="content_btn" class="btn btn-primary" style="width:43px; height:34px;">-->
-<!--<i class="fa fa-lg fa-plus"></i>-->
-<!--</button>-->
-<!--</div>-->
+<div style="position:fixed;right:15px;top:111px;">
+    <button id="content_btn" class="btn btn-primary" style="width:43px; height:34px;">
+        <i class="fa fa-lg fa-plus"></i>
+    </button>
+</div>
 
 <div style="position:fixed;right:15px;top:68px;">
     <button id="nav_btn" class="btn btn-primary">
@@ -44,6 +46,7 @@
 
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
+<script src="app/bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="app/bower_components/angular-new-router/dist/router.es5.js"></script>
 <script src="app/bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -52,6 +55,7 @@
 <script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
 <script src="app/bower_components/angularUtils-disqus/dirDisqus.js"></script>
+<script src="app/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
 <script src="app/bower_components/github-api/dist/github.bundle.min.js"></script>
