[#14] - Release 0x06: Finished nav and TOC jump perfectly.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <script src="http://apps.bdimg.com/libs/highlight.js/8.6/highlight.min.js"></script>
 
 <script src="js/bootstrap.js"></script>
+<script src="js/cjst.js"></script>
 <script src="app.js"></script>
 <script src="app.routes.js"></script>
 <script src="app/controllers/helloCtrl.js"></script>
