[#16] - Add lofter website iframe to show photos.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--<div>{{ main.message }} / {{ main.config }} </div>-->
     <!--<note site-info="main.config" index="main.index"></note>-->
     <div class="row" ng-view></div>
-    <!--<div class="row app-list" ui-view></div>-->
+    <div class="row app-list" ui-view></div>
 
     <div ui-view="viewA"></div>
     <div ui-view="viewB"></div>
