--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
 <script src="app/bower_components/angularUtils-disqus/dirDisqus.js"></script>
 <script src="app/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+<script src="app/bower_components/angulartics/dist/angulartics.min.js"></script>
+<script src="app/bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
 <script src="app/bower_components/github-api/dist/github.bundle.min.js"></script>
@@ -74,5 +76,13 @@
 <script src="app/components/note/nest/nest.js"></script>
 <script src="app/components/note/book/bookList.js"></script>
 <script src="app/services/githubService.js"></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
+</script>
 </body>
 </html>
