[#45] - Refactored toc functionality.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <script src="app/components/appList/appList.js"></script>
 <script src="app/components/jekyll/posts.js"></script>
 <script src="app/components/note/note.js"></script>
-<script src="app/components/note/toc.js"></script>
+<script src="app/components/note/content/toc.js"></script>
 <script src="app/components/note/aside1/aside1.js"></script>
 <script src="app/components/note/aside2/aside2.js"></script>
 <script src="app/components/note/aside3/aside3.js"></script>
