[#54] [#29] - Finished socialshare functionality and add qr for wechat.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 <script src="app/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 <script src="app/bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="app/bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
+<script src="app/bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
+<script src="app/bower_components/qrcode/lib/qrcode.min.js"></script>
+<script src="app/bower_components/angular-qr/angular-qr.min.js"></script>
 
 <script src="app/bower_components/js-yaml/dist/js-yaml.js"></script>
 <script src="app/bower_components/github-api/dist/github.bundle.min.js"></script>
