[#2] - Fixed TOC issue by add class before $anchorScroll and remove class after $anchorScroll.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div ng-include="'app/partials/header.html'"></div>
     <!--<div>{{ main.message }} / {{ main.config }} </div>-->
     <!--<note site-info="main.config" index="main.index"></note>-->
-    <div class="row" ng-view></div>
+    <div class="row" id="content" ng-view></div>
     <div class="row app-list" ui-view></div>
 
     <div ui-view="viewA"></div>
