[#33] [#57] - Bundle module using webpack and change to use ES6 syntax.

--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
     <div ng-include="'app/partials/footer.html'"></div>
 </div>
 
-<script src="app/bower_components/angular/angular.js"></script>
-<script src="app/bower_components/angular-route/angular-route.js"></script>
-<script src="app/bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="./assets/bundle.js"></script>
+<script src="app/components/note/post/toc.js"></script>
 <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="app/bower_components/angular-new-router/dist/router.es5.js"></script>
-<script src="app/bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="app/bower_components/angular-utf8-base64/angular-utf8-base64.js"></script>
-<script src="app/bower_components/marked/lib/marked.js"></script>
-<script src="app/bower_components/angular-marked/dist/angular-marked.js"></script>
 <script src="app/bower_components/angular-cache/dist/angular-cache.js"></script>
 <script src="app/bower_components/angularUtils-disqus/dirDisqus.js"></script>
 <script src="app/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
@@ -54,29 +50,6 @@
 <script src="app/bower_components/jQuery/dist/jquery.min.js"></script>
 <!--<script src="app/bower_components/highlight/src/highlight.js"></script>-->
 <script src="http://apps.bdimg.com/libs/highlight.js/8.6/highlight.min.js"></script>
-
-<script src="js/bootstrap.js"></script>
-<script src="js/cjst.js"></script>
-<script src="app.js"></script>
-<script src="app.routes.js"></script>
-<script src="app/controllers/helloCtrl.js"></script>
-<script src="app/controllers/mainController.js"></script>
-<script src="components/dashboard/dashboard.js"></script>
-<script src="components/home/home.js"></script>
-<script src="components/users/users.js"></script>
-<script src="app/components/hello/hello.js"></script>
-<script src="app/components/appList/appList.js"></script>
-<script src="app/components/jekyll/posts.js"></script>
-<script src="app/components/note/note.js"></script>
-<script src="app/components/note/post/toc.js"></script>
-<script src="app/components/note/aside1/aside1.js"></script>
-<script src="app/components/note/aside2/aside2.js"></script>
-<script src="app/components/note/aside3/aside3.js"></script>
-<script src="app/components/note/link/link.js"></script>
-<script src="app/components/note/post/post.js"></script>
-<script src="app/components/note/nest/nest.js"></script>
-<script src="app/components/note/book/bookList.js"></script>
-<script src="app/services/githubService.js"></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
