--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body ng-app="app" class="body-design">
 
-<div class="container" id="container" ng-controller="MainCtrl as main">
+<div id="container" ng-controller="MainCtrl as main">
     <div ng-include="'app/partials/header.html'"></div>
     <div class="row" ng-view></div>
     <div class="row app-list" ui-view></div>
