[#9] - Restructure folder and delete useless files.

--- a/app/commons/header.html
+++ b/app/commons/header.html
@@ -1,7 +1,7 @@
 <header id="header">
     <div class="logo">
         <a href="http://blog.jimmylv.info" target="_blank" title="立青作品">
-            <img ng-src="images/avatar.jpg"/>
+            <img ng-src="./assets/images/avatar.jpg"/>
         </a>
     </div>
     <div class="menu">
