--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico"/>
 </head>
 <body ng-app="app" ng-cloak class="body-design">
 <!--<app></app>-->
@@ -22,9 +22,9 @@
     <div ng-include="'app/commons/footer.html'"></div>
 </div>
 
-<script src="./assets/bundle.js"></script>
-<script src="app/bower_components/qrcode/lib/qrcode.min.js"></script>
-<script src="app/bower_components/angular-qr/angular-qr.min.js"></script>
+<script src="./dist/bundle.js"></script>
+<script src="assets/libraries/qrcode.min.js"></script>
+<script src="assets/libraries/angular-qr.min.js"></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
