--- a/pages/try_react.html
+++ b/pages/try_react.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
-    <script src="../build/react.js"></script>
-    <script src="../build/react-dom.js"></script>
+    <script src="build/react.js"></script>
+    <script src="build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 </head>
 <body>
