--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
 </head>
-<body ng-app="app" ng-cloak class="body-design">
-<!--<app></app>-->
+<body ng-app="app" ng-cloak>
+
 <div id="container">
     <app-header></app-header>
     <div class="row" ng-view></div>
