--- a/app/features/note/aside2/aside2.html
+++ b/app/features/note/aside2/aside2.html
@@ -1,4 +1,4 @@
-<div class="navside2">
+<div class="col-md-9 col-xs-9 aside2">
     <div class="list-group" id="{{ $ctrl.selectedCategory }}">
         <div ng-repeat="post in $ctrl.posts">
             <a ng-href="#!/note/{{ $ctrl.selectedCategory }}{{ post.url }}"
