[#31] [#46] - Add colorful loader and animation for nav and search functionality.

--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -21,7 +21,7 @@
     </div>
 </header>
 
-<div class="row yue search-results" ng-if="$ctrl.searchText">
+<div class="yue search-results fx-fade-normal fx-dur-800 fx-ease-none" ng-if="$ctrl.searchText">
     <table>
         <tr>
             <th>Category</th>
