--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div ng-viewport="dashboard"></div>
     <div ng-viewport="users"></div>
 
-    <div ng-include="'app/commons/footer.html'"></div>
+    <div ng-include="'app/commons/footer/footer.html'"></div>
 </div>
 
 <script src="./dist/bundle.js"></script>
