--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -5,13 +5,14 @@
         </a>
     </div>
     <div class="menu">
-        <a ng-href="#!/hello" class="link no-mobile">HELLO</a>
-        <a ng-href="#!/zuimeia" class="link no-mobile">APPS</a>
-        <a ng-href="#!/note" class="link active">BLOG</a>
-        <a ng-href="#!/photos" class="link no-mobile">PHOTOS</a>
-        <a ng-link="dashboard" class="link no-mobile">DASHBOARD</a>
-        <a ui-sref="users2" class="link no-mobile">USERS</a>
-        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GITHUB</a>
+        <a ng-href="#!/hello" class="no-mobile">Hello</a>
+        <a ng-href="#!/zuimeia" class="no-mobile">Apps</a>
+        <a ng-href="#!/note" class="active">Blog</a>
+        <a ng-href="#!/photos" class="no-mobile">Photos</a>
+        <a ng-link="dashboard" class="no-mobile">Dashboard</a>
+        <a ui-sref="users2" class="no-mobile">Users</a>
+        <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
+        <a ng-repeat="music in $ctrl.musics" ng-click="$ctrl.play(music)" volume="0.5" start="0.2">{{ music.name }} - {{ music.artists }}</a>
     </div>
     <div class="tool-bar">
         <input autocomplete="off" class="default-search no-mobile" ng-model="$ctrl.searchText" name="keyword"
@@ -27,7 +28,9 @@
             <th>Category</th>
             <th>Post</th>
             <th>Tags</th>
-            <th>搜索「<span id="search-text" ng-click="$ctrl.clearSearch()">{{$ctrl.searchText}}</span>」共计{{($ctrl.posts | filter:$ctrl.searchText).length}}个结果:</th>
+            <th>搜索「<span id="search-text" ng-click="$ctrl.clearSearch()">{{$ctrl.searchText}}</span>」共计{{($ctrl.posts |
+                filter:$ctrl.searchText).length}}个结果:
+            </th>
         </tr>
         <tr ng-repeat="post in $ctrl.posts | filter:$ctrl.searchText">
             <td>{{post.category}}</td>
