--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="./dist/bundle.js"></script>
 <script src="assets/libraries/qrcode.min.js"></script>
 <script src="assets/libraries/angular-qr.min.js"></script>
+<script src="bower_components/angular-audio/app/angular.audio.js"></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
