--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -1,24 +1,41 @@
 <header id="header">
     <div class="logo">
-        <a href="http://blog.jimmylv.info" target="_blank" title="立青作品">
+        <a ng-href="#!/note" target="_blank" title="立青作品">
             <img ng-src="./assets/images/avatar.jpg"/>
         </a>
     </div>
     <div class="menu">
-        <a ng-href="#!/hello" class="no-mobile">Hello</a>
-        <a ng-href="#!/zuimeia" class="no-mobile">Apps</a>
-        <a ng-href="#!/note" class="active">Blog</a>
-        <a ng-href="#!/photos" class="no-mobile">Photos</a>
-        <a ng-link="dashboard" class="no-mobile">Dashboard</a>
-        <a ui-sref="users2" class="no-mobile">Users</a>
+        <a ng-href="#!/hello" class="m-hide">Hello</a>
+        <a ng-href="#!/zuimeia" class="m-hide">Apps</a>
+        <a ng-href="#!/note" class="m-hide active">Blog</a>
+        <a ng-href="#!/photos" class="m-hide">Photos</a>
+        <a ng-link="dashboard" class="m-hide">Dashboard</a>
+        <a ui-sref="users2" class="m-hide">Users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
-        <a ng-repeat="music in $ctrl.musics" ng-click="$ctrl.play(music)" volume="0.5" start="0.2">{{ music.name }} - {{ music.artists }}</a>
     </div>
+
+    <div class="music-player m-player">
+        <a ng-href="http://music.163.com/#/search/m/?s={{ $ctrl.selectedMusic.name }} - {{ $ctrl.selectedMusic.artists }}"
+           target="_blank">
+            <i class="fa fa-lg fa-music" ng-class="{'faa-float animated': !$ctrl.audio.paused}"></i>
+        </a>
+        <a ng-click="$ctrl.audio.paused ? $ctrl.audio.play() : $ctrl.audio.pause()">
+            <i class="fa {{$ctrl.audio.paused ? 'fa-play' : 'fa-pause'}}"></i>
+        </a>
+        <a ng-click="$ctrl.shuffle()">
+            <i class="fa fa-random"></i>
+        </a>
+        <a ng-click="$ctrl.audio.muting = !$ctrl.audio.muting">
+            <i class="fa {{$ctrl.audio.muting ? 'fa-volume-up' : 'fa-volume-off' }}"></i>
+        </a>
+        <a>{{ $ctrl.audio.remaining | trackTime }}</a>
+    </div>
+
     <div class="tool-bar">
-        <input autocomplete="off" class="default-search no-mobile" ng-model="$ctrl.searchText" name="keyword"
+        <input autocomplete="off" class="default-search m-hide" ng-model="$ctrl.searchText" name="keyword"
                placeholder="Search..." type="text">
-        <span class="cancel-search no-mobile" ng-click="$ctrl.clearSearch()"><i class="fa fa-times"></i></span>
-        <span class="random-post" ng-click="$ctrl.randomPost()" analytics-on analytics-event="RandomPost" analytics-category="Commands">随机文章</span>
+        <span class="cancel-search m-hide" ng-click="$ctrl.clearSearch()"><i class="fa fa-times"></i></span>
+        <a class="random-post" ng-click="$ctrl.randomPost()" analytics-on analytics-event="RandomPost" analytics-category="Commands">随机文章</a>
     </div>
 </header>
 
