--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -4,32 +4,17 @@
             <img ng-src="./assets/images/avatar.jpg"/>
         </a>
     </div>
-    <div class="menu">
-        <a ng-href="#!/hello" class="m-hide">Hello</a>
-        <a ng-href="#!/zuimeia" class="m-hide">Apps</a>
-        <a ng-href="#!/note" class="m-hide active">Blog</a>
-        <a ng-href="#!/photos" class="m-hide">Photos</a>
-        <a ng-link="dashboard" class="m-hide">Dashboard</a>
-        <a ui-sref="users2" class="m-hide">Users</a>
+    <div class="menu m-hide">
+        <a ng-href="#!/hello">Hello</a>
+        <a ng-href="#!/zuimeia">Apps</a>
+        <a ng-href="#!/note" class="active">Blog</a>
+        <a ng-href="#!/photos">Photos</a>
+        <a ng-link="dashboard">Dashboard</a>
+        <a ui-sref="users2">Users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
     </div>
 
-    <div class="music-player m-player">
-        <a ng-href="http://music.163.com/#/search/m/?s={{ $ctrl.selectedMusic.name }} - {{ $ctrl.selectedMusic.artists }}"
-           target="_blank">
-            <i class="fa fa-lg fa-music" ng-class="{'faa-float animated': !$ctrl.audio.paused}"></i>
-        </a>
-        <a ng-click="$ctrl.audio.paused ? $ctrl.audio.play() : $ctrl.audio.pause()">
-            <i class="fa {{$ctrl.audio.paused ? 'fa-play' : 'fa-pause'}}"></i>
-        </a>
-        <a ng-click="$ctrl.shuffle()">
-            <i class="fa fa-random"></i>
-        </a>
-        <a ng-click="$ctrl.audio.muting = !$ctrl.audio.muting">
-            <i class="fa {{$ctrl.audio.muting ? 'fa-volume-up' : 'fa-volume-off' }}"></i>
-        </a>
-        <a>{{ $ctrl.audio.remaining | trackTime }}</a>
-    </div>
+    <player class="link"></player>
 
     <div class="tool-bar">
         <input autocomplete="off" class="default-search m-hide" ng-model="$ctrl.searchText" name="keyword"
