[#62] - Extract JS library into separate vendor.js and style text to app.css after autoprefixer.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>最美博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
+    <link rel="stylesheet" href="./dist/app.css">
 </head>
 <body ng-app="app" ng-cloak>
 
@@ -22,6 +23,7 @@
     <div ng-include="'app/commons/footer/footer.html'"></div>
 </div>
 
+<script src="./dist/vendor.js"></script>
 <script src="./dist/bundle.js"></script>
 <script src="assets/libraries/qrcode.min.js"></script>
 <script src="assets/libraries/angular-qr.min.js"></script>
