[#56] - Refactored meta info configuration.

--- a/app/features/note/aside1/aside1.html
+++ b/app/features/note/aside1/aside1.html
@@ -3,13 +3,13 @@
         <li ng-repeat="category in $ctrl.categories" ng-class="category.name === $ctrl.selectedCategory ? 'active': ''">
             <a ng-href="#!/note/{{ category.name }}" data-toggle="tab">{{ category.name }}</a>
         </li>
-        <li><a ng-href="#!/pages/tags" data-toggle="tab">{{ $ctrl.config.locals.tags }}</a></li>
-        <li><a ng-href="#!/pages/archive">{{ $ctrl.config.locals.archive }}</a></li>
-        <li><a ng-href="#!/pages/about">{{ $ctrl.config.locals.about }}</a></li>
+        <li><a ng-href="#!/pages/tags" data-toggle="tab">{{ $ctrl.locals.tags }}</a></li>
+        <li><a ng-href="#!/pages/archive">{{ $ctrl.locals.archive }}</a></li>
+        <li><a ng-href="#!/pages/about">{{ $ctrl.locals.about }}</a></li>
     </ul>
 
     <div class="aside1-bottom">
-        <a ng-href="http://blog.jimmylv.info/pages/atom.xml" target="_blank">
+        <a ng-href="{{ $ctrl.rssUrl }}" target="_blank">
             <i class="fa fa-rss fa-2x"></i>
         </a>
         <a ng-href="mailto:{{ $ctrl.config.author.email }}">
