--- a/app/features/note/aside3/aside3.html
+++ b/app/features/note/aside3/aside3.html
@@ -1,7 +1,7 @@
-<div id="loading-bar-container" class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3 fx-dur-800 fx-ease-sine" ng-class="{'fx-bounce-left': !$ctrl.showNav, 'center-fixed': !$ctrl.showNav}">
+<div id="loading-bar-container" class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3 fx-dur-800 fx-ease-sine"
+     ng-class="{'fx-bounce-left': !$ctrl.showNav, 'center-fixed': !$ctrl.showNav}">
 
     <home ng-if="$ctrl.isIndex"
-          newest="$ctrl.config.locals.newest"
           newest-posts="$ctrl.newestPosts"
           tags-with-posts="$ctrl.tagsWithPosts">
     </home>
