--- a/app/features/note/note.html
+++ b/app/features/note/note.html
@@ -11,8 +11,7 @@
     </aside2>
 </div>
 
-<aside3 config="$ctrl.config"
-        newest-posts="$ctrl.newestPosts"
+<aside3 newest-posts="$ctrl.newestPosts"
         tags-with-posts="$ctrl.selectedTagsWithPosts"
         post-content="$ctrl.postContent"
         show-toc="$ctrl.showToc"
