[#56] - Refactored to remove config fetching by service totally.

--- a/app/features/note/note.html
+++ b/app/features/note/note.html
@@ -2,8 +2,7 @@
      ng-show="$ctrl.showNav">
 
     <aside1 selected-category="$ctrl.selectedCategory"
-            categories="$ctrl.index.categories"
-            site-config="$ctrl.config">
+            categories="$ctrl.index.categories">
     </aside1>
 
     <aside2 selected-category="$ctrl.selectedCategory"
