[#56] - Extract api endpoint and refactor title of page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>最美博客</title>
+    <title>{{ site.project.subtitle }} - {{ site.project.title }} created by {{ site.author.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="./dist/app.css">
