--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ site.project.subtitle }} - {{ site.project.title }} created by {{ site.author.name }}</title>
+    <title>最美博客 - NoBackend Website created by 吕立青</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="./dist/app.css">
@@ -33,7 +33,7 @@
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', '{{ site.ga.id }}', { 'cookieDomain': 'none' });
+    ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
 </script>
 </body>
 </html>
