[#56] - Fixed missing email href on the bottom of aside1.

--- a/app/features/note/aside1/aside1.html
+++ b/app/features/note/aside1/aside1.html
@@ -12,7 +12,7 @@
         <a ng-href="{{ $ctrl.rssUrl }}" target="_blank">
             <i class="fa fa-rss fa-2x"></i>
         </a>
-        <a ng-href="mailto:{{ $ctrl.config.author.email }}">
+        <a ng-href="mailto:{{ $ctrl.author.email }}">
             <i class="fa fa-envelope-o fa-2x"></i>
         </a>
     </div>
