[#17] - Added zhihu section and refactored nav items logic.

--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -9,6 +9,7 @@
         <a ng-href="#!/zuimeia">Apps</a>
         <a ng-href="#!/note" class="active">Blog</a>
         <a ng-href="#!/photos">Photos</a>
+        <a ng-href="#!/pages/zhihu">Zhihu</a>
         <a ng-link="dashboard">Dashboard</a>
         <a ui-sref="users2">Users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
