--- a/app/features/note/note.html
+++ b/app/features/note/note.html
@@ -1,11 +1,11 @@
 <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12 nav-aside fx-bounce-left fx-dur-800 fx-ease-sine"
      ng-show="$ctrl.showNav">
 
-    <aside1 selected-category="$ctrl.selectedCategory"
+    <aside1 selected-nav="$ctrl.selectedCategory"
             categories="$ctrl.index.categories">
     </aside1>
 
-    <aside2 selected-category="$ctrl.selectedCategory"
+    <aside2 selected-nav="$ctrl.selectedCategory"
             posts="$ctrl.selectedPostsByCategory">
     </aside2>
 </div>
