--- a/app/features/note/aside3/aside3.html
+++ b/app/features/note/aside3/aside3.html
@@ -7,7 +7,8 @@
     </home>
 
     <post ng-if="!$ctrl.isIndex"
-          post-content="$ctrl.postContent"
+          front-matter="$ctrl.parsedContent.matter"
+          post-content="$ctrl.parsedContent.content"
           show-toc="$ctrl.showToc">
     </post>
 
