[#17] - Finished basic zhihu functionality including fetch data and extract content, and refactored front matter logic.

--- a/app/features/note/aside3/aside3.html
+++ b/app/features/note/aside3/aside3.html
@@ -7,8 +7,8 @@
     </home>
 
     <post ng-if="!$ctrl.isIndex"
-          front-matter="$ctrl.parsedContent.matter"
-          post-content="$ctrl.parsedContent.content"
+          front-matter="$ctrl.article.matter"
+          post-content="$ctrl.article.content"
           show-toc="$ctrl.showToc">
     </post>
 
